fix more layout issues for mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -47,7 +47,7 @@ a
   padding: 2em 0
 
 .language-toggle__button
-  padding: 0 0.5em
+  padding-right: 0.5em
   background: none
   border: none
   -webkit-appearance: none
@@ -60,6 +60,7 @@ a
     text-decoration: underline
 
   &:not(:first-child)
+    padding-left: 0.5em
     border-left: 2px solid white
 
 .navigation
@@ -73,7 +74,9 @@ a
     &:not(:first-child)
       margin-left: 1em
 
-  &__spacer
+  &__language-toggle
+    display: flex
+    justify-content: flex-end
     flex: 1
 
 .navigation-item
@@ -124,7 +127,7 @@ a
 
   &__title
     margin-top: 0.5em
-    font-size: 2.25em
+    font-size: 2em
     font-weight: bold
     line-height: 1.3
 
@@ -235,3 +238,19 @@ a
 @media only screen and (max-width: 600px)
   html
     font-size: 12px
+
+  .navigation
+    flex-direction: column
+
+    &__item
+      &:not(:first-child)
+        margin-top: 1em
+
+    &__language-toggle
+      margin-top: 1em
+      justify-content: flex-start
+      flex: 0
+
+  .talking-point
+    &__title
+      font-size: 3em
